--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Czas24h\Czas24hTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
