--- a/ProjektSpoj/ProjektSpoj.csproj
+++ b/ProjektSpoj/ProjektSpoj.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Czas24h.cs" />
+    <Compile Include="FreqText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
