--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Czas24h\Czas24hTests.cs" />
+    <Compile Include="FreqTextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
@@ -68,6 +69,9 @@
       <Project>{63F2ED1F-A300-4F0E-BB17-19F8D8C8EC97}</Project>
       <Name>ProjektSpoj</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="FreqText\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
